add first ng componenet -> login

--- a/match-web/app/index.html
+++ b/match-web/app/index.html
@@ -32,8 +32,6 @@
 
   <div ng-view></div>
 
-  <div>Angular seed app: v<span app-version></span></div>
-
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
@@ -55,6 +53,8 @@
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
   <!-- put ng app js here-->
-  
+
+  <script src="login/controller.js"></script>
+
 </body>
 </html>
