--- a/match-web/app/login/view.html
+++ b/match-web/app/login/view.html
@@ -8,13 +8,13 @@
                 <form role="form">
                     <fieldset>
                         <div class="form-group">
-                            <input class="form-control" placeholder="E-mail" name="email" type="email" autofocus>
+                            <input class="form-control" placeholder="Username" name="username" type="username" autofocus ng-model="credentials.username">
                         </div>
                         <div class="form-group">
-                            <input class="form-control" placeholder="Password" name="password" type="password" value="">
+                            <input class="form-control" placeholder="Password" name="password" type="password" value="" ng-model="credentials.password">
                         </div>
                         <!-- Change this to a button or input when using this as a form -->
-                        <a href="index.html" class="btn btn-lg btn-success btn-block">Login</a>
+                        <a ng-click="login()" class="btn btn-lg btn-success btn-block">Login</a>
                     </fieldset>
                 </form>
             </div>
