login about to finish

--- a/match-web/app/index.html
+++ b/match-web/app/index.html
@@ -33,7 +33,7 @@
     <div class="alert alert-{{alert.type}} alert-dismissable" ng-repeat="alert in alerts">
         <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
         {{alert.message}}
-        <!-- <a href="#" class="alert-link">Alert Link</a>. -->
+        <a href="{{alert.link}}" target="_blank" class="alert-link" ng-show="alert.link">More</a>.
     </div>
 
     <div ng-view></div>
