--- a/match-web/app/index.html
+++ b/match-web/app/index.html
@@ -21,7 +21,7 @@
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
-  <ul class="menu">
+  <ul class="menu" ng-show="user">
     <li><a href="#/view1">view1</a></li>
     <li><a href="#/view2">view2</a></li>
   </ul>
@@ -65,6 +65,7 @@
 
   <!-- controllers -->
   <script src="login/controller.js"></script>
+  <script src="home/controller.js"></script>
 
 </body>
 </html>
