--- a/match-web/app/index.html
+++ b/match-web/app/index.html
@@ -21,9 +21,8 @@
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
-  <ul class="menu" ng-show="user">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
+  <ul class="menu" ng-show="user" ng-controller="LoginCtrl">
+    <li><a ng-click="logout()" href="">logout</a></li>
   </ul>
 
   <!--[if lt IE 7]>
