--- a/match-web/app/login/view.html
+++ b/match-web/app/login/view.html
@@ -2,19 +2,19 @@
     <div class="col-md-4 col-md-offset-4">
         <div class="login-panel panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">Please Sign In</h3>
+                <h3 class="panel-title" translate>login.title</h3>
             </div>
             <div class="panel-body">
                 <form role="form">
                     <fieldset>
                         <div class="form-group">
-                            <input class="form-control" placeholder="Username" name="username" type="username" autofocus ng-model="credentials.username">
+                            <input class="form-control" placeholder="{{'username' | translate}}" name="username" type="username" autofocus ng-model="credentials.username">
                         </div>
                         <div class="form-group">
-                            <input class="form-control" placeholder="Password" name="password" type="password" value="" ng-model="credentials.password">
+                            <input class="form-control" placeholder="{{'password' | translate}}" name="password" type="password" value="" ng-model="credentials.password">
                         </div>
                         <!-- Change this to a button or input when using this as a form -->
-                        <a ng-click="login()" class="btn btn-lg btn-success btn-block">Login</a>
+                        <a ng-click="login()" class="btn btn-lg btn-success btn-block" translate>login</a>
                     </fieldset>
                 </form>
             </div>
