--- a/match-web/app/index.html
+++ b/match-web/app/index.html
@@ -22,8 +22,10 @@
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
-  <ul class="menu" ng-show="user" ng-controller="LoginCtrl">
-    <li><a ng-click="logout()" href="">logout</a></li>
+
+  <ul class="menu" ng-show="user" ng-controller="MenuCtrl">
+    <li ng-repeat="item in menu"><a href="{{item.link}}" translate>{{item.title}}</a></li>
+    <li><a ng-click="logout()" href="" translate>logout</a></li>
   </ul>
 
   <!--[if lt IE 7]>
@@ -68,6 +70,7 @@
   <!-- controllers -->
   <script src="login/controller.js"></script>
   <script src="home/controller.js"></script>
+  <script src="menu/controller.js"></script>
 
 </body>
 </html>
