--- a/match-web/app/index.html
+++ b/match-web/app/index.html
@@ -23,10 +23,7 @@
 </head>
 <body>
 
-  <ul class="menu" ng-show="user" ng-controller="MenuCtrl">
-    <li ng-repeat="item in menu"><a href="{{item.link}}" translate>{{item.title}}</a></li>
-    <li><a ng-click="logout()" href="" translate>logout</a></li>
-  </ul>
+  <div ng-include="'menu/view.html'"></div>
 
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -66,6 +63,7 @@
 
   <!-- services -->
   <script src="login/service.js"></script>
+  <script src="menu/service.js"></script>
 
   <!-- controllers -->
   <script src="login/controller.js"></script>
