--- a/match-web/app/index.html
+++ b/match-web/app/index.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="app.css">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
-<body>
+<body ng-cloak>
 
   <div ng-include="'menu/view.html'"></div>
 
