--- a/match-web/app/index.html
+++ b/match-web/app/index.html
@@ -64,11 +64,13 @@
   <!-- services -->
   <script src="login/service.js"></script>
   <script src="menu/service.js"></script>
+  <script src="applicant/service.js"></script>
 
   <!-- controllers -->
   <script src="login/controller.js"></script>
   <script src="home/controller.js"></script>
   <script src="menu/controller.js"></script>
+  <script src="applicant/controller.js"></script>
 
 </body>
 </html>
