working on applicant js controllers/service

--- a/match-web/app/index.html
+++ b/match-web/app/index.html
@@ -52,6 +52,7 @@
   <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <script src="bower_components/angular-translate/angular-translate.js"></script>
   <script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
+  <script src="bower_components/angular-resource/angular-resource.js"></script>
   <!-- put ng plugins here-->
 
   <script src="app.js"></script>
@@ -70,7 +71,9 @@
   <script src="login/controller.js"></script>
   <script src="home/controller.js"></script>
   <script src="menu/controller.js"></script>
-  <script src="applicant/controller.js"></script>
+  <script src="applicant/create/controller.js"></script>
+  <script src="applicant/update/controller.js"></script>
+  <script src="applicant/list/controller.js"></script>
 
 </body>
 </html>
