--- a/match-web/app/index.html
+++ b/match-web/app/index.html
@@ -53,6 +53,7 @@
   <script src="bower_components/angular-translate/angular-translate.js"></script>
   <script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
   <script src="bower_components/angular-resource/angular-resource.js"></script>
+  <script src="/bower_components/angular-messages/angular-messages.js"></script>
   <!-- put ng plugins here-->
 
   <script src="app.js"></script>
