add edit button

--- a/match-web/app/applicant/list/view.html
+++ b/match-web/app/applicant/list/view.html
@@ -22,6 +22,7 @@
                             <th translate>eyeColor</th>
                             <th translate>hairColor</th>
                             <th translate>skinColor</th>
+                            <th translate>update</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -37,6 +38,7 @@
                             <td>{{item.eyeColor}}</td>
                             <td>{{item.hairColor}}</td>
                             <td>{{item.skinColor}}</td>
+                            <td><a href="#/applicants/edit/{{item.id}}" translate>update<a/></td>
                         </tr>
                     </tbody>
                 </table>
