--- a/match-web/app/applicant/details.html
+++ b/match-web/app/applicant/details.html
@@ -5,13 +5,13 @@
     <div class="row">
         <div class="form-group col-md-6">
             <label translate>username</label>
-            <input type="text" class="form-control" ng-model="item.user.username" name="username" placeholder="{{'username' | translate}}" required>
+            <input type="text" class="form-control" ng-model="item.user.username" name="username" placeholder="{{'username' | translate}}" required ng-disabled="type == 'update'">
             <div ng-messages="form.username.$error" ng-if="form.username.$dirty" class="has-error">
                 <div class="help-block" ng-message="required">{{'field.required' | translate}}</div>
             </div>
         </div>
 
-        <div class="form-group col-md-6">
+        <div class="form-group col-md-6" ng-if="type == 'create'">
             <label translate>password</label>
             <input type="text" class="form-control" ng-model="item.user.password" name="password" placeholder="{{'password' | translate}}" required>
             <div ng-messages="form.password.$error" ng-if="form.password.$dirty" class="has-error">
@@ -26,10 +26,10 @@
             <label translate>gender</label>
             <select class="form-control" ng-model="item.gender" name="gender" required>
                 <option value="m">
-                    {{'male' | translate}}
+                    {{'gender.m' | translate}}
                 </option>
                 <option value="f">
-                    {{'female' | translate}}
+                    {{'gender.f' | translate}}
                 </option>
             </select>
             <div ng-messages="form.gender.$error" ng-if="form.gender.$dirty" class="has-error">
