--- a/match-web/app/applicant/details.html
+++ b/match-web/app/applicant/details.html
@@ -48,7 +48,7 @@
 
     <div class="row">
         <button type="button" class="btn btn-primary" ng-click="form.$valid && save()" ng-disabled="form.$invalid" translate>{{type | translate}}</button>
-        <a href="#/applicants/1" class="btn btn-default" translate>cancel</a>
+        <a href="#/applicants" class="btn btn-default" translate>cancel</a>
     </div>
 
 </form>
