--- a/match-web/app/applicant/list/view.html
+++ b/match-web/app/applicant/list/view.html
@@ -5,50 +5,49 @@
 </h3>
 
 <div class="col-lg-12">
-    <div class="panel panel-default">
-        <div class="panel-body">
-            <div class="table-responsive">
-                <table class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th translate>gender</th>
-                            <th translate>age</th>
-                            <th translate>nationality</th>
-                            <th translate>countryOfPlace</th>
-                            <th translate>weight</th>
-                            <th translate>length</th>
-                            <th translate>skinColor</th>
-                            <th translate>educationLevel</th>
-                            <th translate>job</th>
-                            <th translate>religion</th>
-                            <th translate>maritalStatus</th>
-                            <th translate>haveKids</th>
-                            <th translate>update</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr ng-repeat="item in list">
-                            <td>{{'gender.' + item.gender  | translate}}</td>
-                            <td>{{item.age}}</td>
-                            <td>{{item.nationality}}</td>
-                            <td>{{item.countryOfPlace}}</td>
-                            <td>{{item.weight}}</td>
-                            <td>{{item.length}}</td>
-                            <td>{{item.skinColor}}</td>
-                            <td>{{item.educationLevel}}</td>
-                            <td>{{item.job}}</td>
-                            <td>{{item.religion}}</td>
-                            <td>{{item.maritalStatus}}</td>
-                            <td>{{item.haveKids}}</td>
-                            <td><a href="#/applicants/edit/{{item.id}}" translate>update<a/></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            <!-- /.table-responsive -->
-        </div>
-        <!-- /.panel-body -->
+    <table class="table table-striped table-responsive">
+        <thead>
+            <tr>
+                <th translate>gender</th>
+                <th translate>age</th>
+                <th translate>nationality</th>
+                <th translate>countryOfPlace</th>
+                <th translate>weight</th>
+                <th translate>length</th>
+                <th translate>skinColor</th>
+                <th translate>educationLevel</th>
+                <th translate>job</th>
+                <th translate>religion</th>
+                <th translate>maritalStatus</th>
+                <th translate>haveKids</th>
+                <th translate>update</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat="item in list.content">
+                <td>{{'gender.' + item.gender  | translate}}</td>
+                <td>{{item.age}}</td>
+                <td>{{item.nationality}}</td>
+                <td>{{item.countryOfPlace}}</td>
+                <td>{{item.weight}}</td>
+                <td>{{item.length}}</td>
+                <td>{{item.skinColor}}</td>
+                <td>{{item.educationLevel}}</td>
+                <td>{{item.job}}</td>
+                <td>{{item.religion}}</td>
+                <td>{{item.maritalStatus}}</td>
+                <td>{{item.haveKids}}</td>
+                <td>
+                    <a href="#/applicants/edit/{{item.id}}" translate>update<a/></td>
+                </tr>
+            </tbody>
+        </table>
+        <uib-pagination
+            total-items="list.totalElements"
+            ng-model="currentPage"
+            ng-change="getData()"
+            first-text="{{'first_text' | translate}}"
+            last-text="{{'last_text' | translate}}"
+            next-text="{{'next_text' | translate}}"
+            previous-text="{{'previous_text' | translate}}"></uib-pagination>
     </div>
-    <!-- /.panel -->
-</div>
-<!-- /.col-lg-6 -->
