--- a/match-web/app/applicant/details.html
+++ b/match-web/app/applicant/details.html
@@ -4,7 +4,7 @@
 
     <div class="row">
         <div class="form-group col-md-6">
-            <label translate>username</label>
+            <label translate>username</label> *
             <input type="text" class="form-control" ng-model="item.user.username" name="username" placeholder="{{'username' | translate}}" required ng-disabled="type == 'update'">
             <div ng-messages="form.username.$error" ng-if="form.username.$dirty" class="has-error">
                 <div class="help-block" ng-message="required">{{'field.required' | translate}}</div>
@@ -12,18 +12,17 @@
         </div>
 
         <div class="form-group col-md-6" ng-if="type == 'create'">
-            <label translate>password</label>
+            <label translate>password</label> *
             <input type="text" class="form-control" ng-model="item.user.password" name="password" placeholder="{{'password' | translate}}" required>
             <div ng-messages="form.password.$error" ng-if="form.password.$dirty" class="has-error">
                 <div class="help-block" ng-message="required">{{'field.required' | translate}}</div>
             </div>
         </div>
-
     </div>
 
     <div class="row">
         <div class="form-group col-md-6">
-            <label translate>gender</label>
+            <label translate>gender</label> *
             <select class="form-control" ng-model="item.gender" name="gender" required>
                 <option value="m">
                     {{'gender.m' | translate}}
@@ -38,13 +37,146 @@
         </div>
 
         <div class="form-group col-md-6">
-            <label translate>age</label>
+            <label translate>age</label> *
             <input type="number" class="form-control" ng-model="item.age" name="age" placeholder="{{'age' | translate}}" required>
             <div ng-messages="form.age.$error" ng-if="form.age.$dirty" class="has-error">
                 <div class="help-block" ng-message="required">{{'field.required' | translate}}</div>
             </div>
         </div>
     </div>
+
+    <div class="row">
+        <div class="form-group col-md-6">
+            <label translate>nationality</label> *
+            <select class="form-control" ng-model="item.nationality" name="nationality" required>
+                <option ng-repeat="country in lookups.countries | orderBy:country" value="{{country}}">{{country}}</option>
+            </select>
+            <div ng-messages="form.nationality.$error" ng-if="form.nationality.$dirty" class="has-error">
+                <div class="help-block" ng-message="required">{{'field.required' | translate}}</div>
+            </div>
+        </div>
+
+        <div class="form-group col-md-6">
+            <label translate>countryOfPlace</label> *
+            <select class="form-control" ng-model="item.countryOfPlace" name="countryOfPlace" required>
+                <option ng-repeat="country in lookups.countries | orderBy:country" value="{{country}}">{{country}}</option>
+            </select>
+            <div ng-messages="form.countryOfPlace.$error" ng-if="form.countryOfPlace.$dirty" class="has-error">
+                <div class="help-block" ng-message="required">{{'field.required' | translate}}</div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="form-group col-md-6">
+            <label translate>governorate</label>
+            <input type="text" class="form-control" ng-model="item.governorate" name="governorate" placeholder="{{'governorate' | translate}}">
+        </div>
+
+        <div class="form-group col-md-6">
+            <label translate>bodyShape</label>
+            <input type="text" class="form-control" ng-model="item.bodyShape" name="bodyShape" placeholder="{{'bodyShape' | translate}}">
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="form-group col-md-6">
+            <label translate>weight</label> *
+            <input type="number" class="form-control" ng-model="item.weight" name="weight" placeholder="{{'weight' | translate}}" required>
+            <div ng-messages="form.weight.$error" ng-if="form.weight.$dirty" class="has-error">
+                <div class="help-block" ng-message="required">{{'field.required' | translate}}</div>
+            </div>
+        </div>
+
+        <div class="form-group col-md-6">
+            <label translate>length</label> *
+            <input type="number" class="form-control" ng-model="item.length" name="length" placeholder="{{'length' | translate}}" required>
+            <div ng-messages="form.length.$error" ng-if="form.length.$dirty" class="has-error">
+                <div class="help-block" ng-message="required">{{'field.required' | translate}}</div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="row">
+        <div class="form-group col-md-6">
+            <label translate>eyeColor</label>
+            <input type="text" class="form-control" ng-model="item.eyeColor" name="eyeColor" placeholder="{{'eyeColor' | translate}}">
+        </div>
+
+        <div class="form-group col-md-6">
+            <label translate>hairColor</label>
+            <input type="text" class="form-control" ng-model="item.hairColor" name="hairColor" placeholder="{{'hairColor' | translate}}">
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="form-group col-md-6">
+            <label translate>skinColor</label>
+            <input type="text" class="form-control" ng-model="item.skinColor" name="skinColor" placeholder="{{'skinColor' | translate}}">
+        </div>
+
+        <div class="form-group col-md-6">
+            <label translate>secondaryLang</label>
+            <input type="text" class="form-control" ng-model="item.secondaryLang" name="secondaryLang" placeholder="{{'secondaryLang' | translate}}">
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="form-group col-md-6">
+            <label translate>educationLevel</label>
+            <input type="text" class="form-control" ng-model="item.educationLevel" name="educationLevel" placeholder="{{'educationLevel' | translate}}">
+        </div>
+
+        <div class="form-group col-md-6">
+            <label translate>job</label>
+            <input type="text" class="form-control" ng-model="item.job" name="job" placeholder="{{'job' | translate}}">
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="form-group col-md-6">
+            <label translate>religion</label> *
+            <select class="form-control" ng-model="item.religion" name="religion" required>
+                <option ng-repeat="religion in lookups.religion" value="{{religion}}">{{religion}}</option>
+            </select>
+            <div ng-messages="form.religion.$error" ng-if="form.religion.$dirty" class="has-error">
+                <div class="help-block" ng-message="required">{{'field.required' | translate}}</div>
+            </div>
+        </div>
+
+        <div class="form-group col-md-6">
+            <label translate>maritalStatus</label> *
+            <select class="form-control" ng-model="item.maritalStatus" name="maritalStatus" required>
+                <option ng-repeat="maritalStatus in lookups.maritalStatus" value="{{maritalStatus}}">{{maritalStatus}}</option>
+            </select>
+            <div ng-messages="form.maritalStatus.$error" ng-if="form.maritalStatus.$dirty" class="has-error">
+                <div class="help-block" ng-message="required">{{'field.required' | translate}}</div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row"></div>
+
+    <div class="row"></div>
+
+    <div class="row"></div>
+
+    <div class="row"></div>
+
+    <div class="row"></div>
+
+    <div class="row"></div>
+
+    <div class="row"></div>
+
+    <div class="row"></div>
+
+    <div class="row"></div>
+
+    <div class="row"></div>
+
+    <div class="row"></div>
 
     <div class="row">
         <button type="button" class="btn btn-primary" ng-click="form.$valid && save()" ng-disabled="form.$invalid" translate>{{type | translate}}</button>
