--- a/match-web/app/index.html
+++ b/match-web/app/index.html
@@ -62,6 +62,7 @@
   <!-- commons services -->
   <script src="commons/base64-service.js"></script>
   <script src="commons/alert-service.js"></script>
+  <script src="commons/countries-service.js"></script>
 
   <!-- services -->
   <script src="login/service.js"></script>
