--- a/match-web/app/login/view.html
+++ b/match-web/app/login/view.html
@@ -14,7 +14,7 @@
                             <input class="form-control" placeholder="{{'password' | translate}}" name="password" type="password" value="" ng-model="credentials.password">
                         </div>
                         <!-- Change this to a button or input when using this as a form -->
-                        <a ng-click="login()" class="btn btn-lg btn-success btn-block" translate>login</a>
+                        <a ng-click="login()" class="btn btn-lg btn-primary btn-block" translate>login</a>
                     </fieldset>
                 </form>
             </div>
