margin-bottom: 4em

--- a/match-web/app/index.html
+++ b/match-web/app/index.html
@@ -35,7 +35,7 @@
         <a href="{{alert.link}}" target="_blank" class="alert-link" ng-show="alert.link">More</a>.
     </div>
 
-    <div ng-view></div>
+    <div ng-view class="main-view"></div>
 </div>
 
   <!-- In production use:
