--- a/match-web/app/applicant/list/view.html
+++ b/match-web/app/applicant/list/view.html
@@ -32,7 +32,7 @@
                 <td>{{item.job}}</td>
                 <td>{{item.religion}}</td>
                 <td>{{item.maritalStatus}}</td>
-                <td>{{item.haveKids}}</td>
+                <td>{{item.haveKids | translate}}</td>
                 <td>
                     <a href="#/applicants/edit/{{item.id}}" translate>update<a/></td>
                 </tr>
