--- a/match-web/app/applicant/list/view.html
+++ b/match-web/app/applicant/list/view.html
@@ -4,6 +4,12 @@
     </a>
 </h3>
 
+<uib-accordion>
+    <uib-accordion-group heading="{{'filters' | translate}}" is-open="status.isFirstOpen">
+        <div ng-include="'applicant/filter/view.html'"/>
+    </uib-accordion-group>
+</uib-accordion>
+
 <div class="col-lg-12">
     <table class="table table-striped table-responsive">
         <thead>
