--- a/match-web/app/index.html
+++ b/match-web/app/index.html
@@ -76,6 +76,7 @@
   <script src="applicant/create/controller.js"></script>
   <script src="applicant/update/controller.js"></script>
   <script src="applicant/list/controller.js"></script>
+  <script src="applicant/filter/controller.js"></script>
 
 </body>
 </html>
