working on filters

--- a/match-web/app/applicant/filter/view.html
+++ b/match-web/app/applicant/filter/view.html
@@ -76,7 +76,7 @@
     </div>
 
     <div class="row">
-        <button type="button" class="btn btn-primary" ng-click="form.$valid && filter()" ng-disabled="form.$invalid" translate>{{'filters' | translate}}</button>
+        <button type="button" class="btn btn-primary" ng-click="form.$valid && getData()" ng-disabled="form.$invalid" translate>{{'search' | translate}}</button>
         <a ng-click="cancel()" class="btn btn-default" translate>cancel</a>
     </div>
 
