--- a/match-web/app/applicant/list/view.html
+++ b/match-web/app/applicant/list/view.html
@@ -5,7 +5,7 @@
 </h3>
 
 <uib-accordion>
-    <uib-accordion-group heading="{{'filters' | translate}}">
+    <uib-accordion-group heading="{{'search' | translate}}">
         <div ng-include="'applicant/filter/view.html'" ng-controller="FilterApplicantCtrl"/>
     </uib-accordion-group>
 </uib-accordion>
