--- a/match-web/app/index.html
+++ b/match-web/app/index.html
@@ -60,9 +60,10 @@
 
 
   <!-- commons services -->
-  <script src="commons/base64-service.js"></script>
-  <script src="commons/alert-service.js"></script>
-  <script src="commons/lookup-service.js"></script>
+  <script src="commons/services/base64-service.js"></script>
+  <script src="commons/services/alert-service.js"></script>
+  <script src="commons/services/lookup-service.js"></script>
+  <script src="commons/directives/unique-directive.js"></script>
 
   <!-- services -->
   <script src="login/service.js"></script>
