--- a/match-web/app/applicant/filter/view.html
+++ b/match-web/app/applicant/filter/view.html
@@ -71,7 +71,7 @@
 
         <div class="form-group col-md-6">
             <label translate>haveKids</label>
-            <input type="checkbox" ng-model="item.haveKids" name="haveKids" placeholder="{{'haveKids' | translate}}">
+            <input bs-switch type="checkbox" ng-model="item.haveKids" name="haveKids">
         </div>
     </div>
 
