--- a/match-web/app/index.html
+++ b/match-web/app/index.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.css">
   <link rel="stylesheet" href="bower_components/angular-bootstrap/ui-bootstrap-csp.css">
   <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css">
+  <link rel="stylesheet" href="bower_components/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.css">
 
   <!-- put css here-->
   <link rel="stylesheet" href="app.css">
@@ -43,6 +44,7 @@
   -->
   <script src="bower_components/jquery/dist/jquery.js"></script>
   <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+  <script src="bower_components/bootstrap-switch/dist/js/bootstrap-switch.js"></script>
   <!-- put non-ng js here-->
 
   <script src="bower_components/angular/angular.js"></script>
@@ -53,7 +55,8 @@
   <script src="bower_components/angular-translate/angular-translate.js"></script>
   <script src="bower_components/angular-translate-loader-static-files/angular-translate-loader-static-files.js"></script>
   <script src="bower_components/angular-resource/angular-resource.js"></script>
-  <script src="/bower_components/angular-messages/angular-messages.js"></script>
+  <script src="bower_components/angular-messages/angular-messages.js"></script>
+  <script src="bower_components/angular-bootstrap-switch/dist/angular-bootstrap-switch.js"></script>
   <!-- put ng plugins here-->
 
   <script src="app.js"></script>
