add css class for numbers

--- a/match-web/app/applicant/list/view.html
+++ b/match-web/app/applicant/list/view.html
@@ -30,11 +30,11 @@
         <tbody>
             <tr ng-repeat="item in list.content">
                 <td>{{'gender.' + item.gender  | translate}}</td>
-                <td>{{item.age}}</td>
+                <td class="number-font">{{item.age}}</td>
                 <td>{{item.nationality}}</td>
                 <td>{{item.countryOfPlace}}</td>
-                <td>{{item.weight}}</td>
-                <td>{{item.length}}</td>
+                <td class="number-font">{{item.weight}}</td>
+                <td class="number-font">{{item.length}}</td>
                 <td>{{item.job}}</td>
                 <td>{{item.religion}}</td>
                 <td>{{item.maritalStatus}}</td>
