--- a/match-web/app/index.html
+++ b/match-web/app/index.html
@@ -74,6 +74,7 @@
   <script src="login/service.js"></script>
   <script src="menu/service.js"></script>
   <script src="applicant/service.js"></script>
+  <script src="admin/service.js"></script>
 
   <!-- controllers -->
   <script src="login/controller.js"></script>
@@ -83,6 +84,9 @@
   <script src="applicant/update/controller.js"></script>
   <script src="applicant/list/controller.js"></script>
   <script src="applicant/filter/controller.js"></script>
+  <script src="admin/create/controller.js"></script>
+  <script src="admin/update/controller.js"></script>
+  <script src="admin/list/controller.js"></script>
 
 </body>
 </html>
