--- a/match-web/app/applicant/details.html
+++ b/match-web/app/applicant/details.html
@@ -13,19 +13,31 @@
                         <div class="form-group col-md-6">
                             <label translate>username</label>
                             *
-                            <input type="text" class="form-control" ng-model="item.user.username" name="username" placeholder="{{'username' | translate}}" required unique="user.username" uniqueId="{{item.user.id}}" ng-disabled="type == 'update'">
+                            <input
+                                type="text"
+                                class="form-control"
+                                ng-model="item.user.username"
+                                name="username"
+                                placeholder="{{'username' | translate}}"
+                                required
+                                unique="user.username"
+                                uniqueId="{{type == 'update'? item.user.id: -1}}"
+                                ng-disabled="type == 'update'"
+                                ng-pattern="/^[A-Za-z0-9_.-]*$/">
                             <div ng-messages="form.username.$error" ng-if="form.username.$dirty" class="has-error">
                                 <div class="help-block" ng-message="required">{{'field.required' | translate}}</div>
                                 <div class="help-block" ng-message="unique">{{'field.duplicate' | translate}}</div>
+                                <div class="help-block" ng-message="pattern">{{'field.pattern.english' | translate}}</div>
                             </div>
                         </div>
 
                         <div class="form-group col-md-6" ng-if="type == 'create'">
                             <label translate>password</label>
                             *
-                            <input type="text" class="form-control" ng-model="item.user.password" name="password" placeholder="{{'password' | translate}}" required>
+                            <input type="text" class="form-control" ng-model="item.user.password" name="password" placeholder="{{'password' | translate}}" required ng-pattern="/^[$&+,:;=?@#|'<>.^*()%!-]*$/">
                             <div ng-messages="form.password.$error" ng-if="form.password.$dirty" class="has-error">
                                 <div class="help-block" ng-message="required">{{'field.required' | translate}}</div>
+                                <div class="help-block" ng-message="pattern">{{'field.pattern.english.special' | translate}}</div>
                             </div>
                         </div>
                     </div>
@@ -228,18 +240,18 @@
                     </div>
 
                     <div class="row">
-                      <div class="form-group col-md-4">
-                          <label translate>hijab</label>
-                          <input bs-switch type="checkbox" ng-model="item.hijab" name="hijab" >
-                      </div>
+                        <div class="form-group col-md-4">
+                            <label translate>hijab</label>
+                            <input bs-switch type="checkbox" ng-model="item.hijab" name="hijab">
+                        </div>
                         <div class="form-group col-md-4">
                             <label translate>haveKids</label>
-                            <input bs-switch type="checkbox" ng-model="item.haveKids" name="haveKids" >
+                            <input bs-switch type="checkbox" ng-model="item.haveKids" name="haveKids">
                         </div>
 
                         <div class="form-group col-md-4">
                             <label translate>likeToHaveKids</label>
-                            <input bs-switch type="checkbox" ng-model="item.likeToHaveKids" name="likeToHaveKids" >
+                            <input bs-switch type="checkbox" ng-model="item.likeToHaveKids" name="likeToHaveKids">
                         </div>
                     </div>
 
